--- a/index.html
+++ b/index.html
@@ -5,35 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="https://images.unsplash.com/photo-1455849318743-b2233052fcff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" type="image/x-icon">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class='container-fluid'>
+        <nav class="row">
             <div>
-                <img src="" alt="">
+                <img src="./images/ccd-edited.jpg" alt="dp">
                 <h4>Hamsa Vardhan</h4>
-                <ul>
-                    <li>about</li>
-                    <li>knowledge</li>
-                    <li>projects</li>
-                    <li>contact</li>
-                </ul>
             </div>
+            <label for="burger">
+                <img src="./images/down-arrow.svg" alt="&#9776">
+                <input type="checkbox" name="burger" id="burger">
+            </label>
+            <ul>
+                <li> <a href="#about">about</a> </li>
+                <li> <a href="#knowledge">knowledge</a> </li>
+                <li> <a href="#projects">projects</a> </li>
+                <li> <a href="#contact">contact</a> </li>
+            </ul>   
         </nav>
         <div>
-            <img src="" alt="">
-            <p>I'm <b>Hamsa Vardhan</b> <i>web developer</i> </p>
+            <img src="./images/ccd-edited.jpg" alt="personal image">
+            <p>I'm <br> <b>Hamsa Vardhan</b> <br> <i>a web developer</i> </p>
         </div>
     </header>
-    <main>
-        <div>
-            <div>
-                <img src="" alt="">
-            </div>
-            <div>
-                <div><img src="" alt=""></div>
-                <h1>About Me</h1>
-                <p>
+    <main class="container-fluid">
+        <div class="row" id="about">
+            <div class="container">
+                <h1 class="col-12 text-center">I'm</h1>
+                <img src="./images/about.jpg" alt="about me">
+                <p class="col-10 offset-2 text-center">
                         A fervent web developer with great enthusiasm to enrich web. 
                         I prefer to keep learning, continue challenging myself, and do interesting things that matter.
                     My abundant energy fuels me in the pursuit of many interests,
@@ -43,136 +46,163 @@
                 </p>
             </div>
         </div>
-        <div>
-            <h1>what I can do?</h1>
-            <div>
-                <div><img src="" alt=""></div>
-                <h3>Design website</h3>
-                <p>
+        <div class="row">
+            <div class="container">
+                <h1 class="col-12 text-center">what I can do?</h1>
+                <h3 class="col-9 text-center">Design a website</h3>
+                <p class="col-9">
                     I can design and create a dynamic website that can be used in mobile and desktop.Make website look good with little animations.yes, I can do a front-end developer job.
                 </p>
-            </div>
-            <div>
-                <div><img src="" alt=""></div>
-                <h3>Develop website</h3>
-                <p>
+                <img src="./images/cando.png" alt="seo">
+                <h3 class="col-9 text-center">Develop a website</h3>
+                <p class="col-9">
                     I can devolp the website.I can store  data securely and retrieve it when needed.I can create an api for the website and connect it with front-end.yes, I can do backend developer job.
                 </p>
             </div>
         </div>
-        <div>
-            <h1>I can do with?</h1>
-            <ul>
-                <li>
-                    <h5>front-end</h5>
-                    <ul>
-                        <li>
-                            Reactjs
-                        </li>
-                        <li>
-                            Angular
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h5>Backend</h5>
-                    <ul>
-                        <li>
-                            nodejs
-                        </li>
-                        <li>
-                            flask
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h5>Database</h5>
-                    <ul>
-                        <li>
-                            mongodb (nosql)
-                        </li>
-                        <li>
-                            mysql (sql)
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <h5>languages</h5>
-                    <ul>
-                        <li>
-                            html5 / css3
-                        </li>
-                        <li>
-                            javascript
-                        </li>   
-                        <li>
-                            python
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+        <div class="row" id="knowledge">
+            <div class="container">
+                <h1 class="col-12 text-center">I can do with?</h1>
+                <ul class="col-12">
+                    <li>
+                        <h5>frontend</h5>
+                        <ul>
+                            <li>
+                                Reactjs
+                            </li>
+                            <li>
+                                Angular
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Backend</h5>
+                        <ul>
+                            <li>
+                                nodejs
+                            </li>
+                            <li>
+                                flask
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>Database</h5>
+                        <ul>
+                            <li>
+                                mongodb (nosql)
+                            </li>
+                            <li>
+                                mysql (sql)
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h5>languages</h5>
+                        <ul>
+                            <li>
+                                html5 / css3
+                            </li>
+                            <li>
+                                javascript
+                            </li>   
+                            <li>
+                                python
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div>
-            <h1>what I did ?</h1>
-            <div>
-                <h3>personalized chat</h3>
+        <div class="row" id="projects">
+            <h1 class="container text-center">what I did ?</h1>
+            <div class="container bigproj my-5">
+                <h3 class="col-9 text-center">personalized chat</h3>
                 <img src="" alt="">
-                <p>
+                <p class="col-9">
                     Login to your account(Authentication included).Find your friends and chat.There is a room chat too.Join a room or create a room of your own.Ask your friends to join in same room and chat.There is an add a friend option
                 </p>
+                <h5 class="col-9"><b>Dev-Dependencies : </b><i>Reactjs, mongodb, nodejs, express</i></h5>
+                <div  class="col-9"><a href="https://app.netlify.com/sites/hava-chat" target="_blank"><button>visit</button></a></div>
             </div>
-            <div>
-                <h3>url shortener</h3>
+            <div class="container bigproj my-5">
+                <h3 class="col-9 offset-3 text-center">url shortener</h3>
                 <img src="" alt="">
-                <p>
+                <p class="col-9 offset-3 text-center">
                     Create an account. Activate it through mail. Have an forgot password option too. Enter into dashboard. Enter annoying long url to get peaceful short url.
                 </p>
+                <h5 class="col-9 offset-3"><b>Dev-Dependencies : </b><i>Angular, nodejs, express</i></h5>
+                <div  class="col-9 offset-3"><a href="https://app.netlify.com/sites/hamsavardhan-urlshortener-frontend" target="_blank"><button>visit</button></a></div>
             </div>
-            <div>
-                <h3>covid-19 visualizer</h3>
+            <div class="container bigproj my-5">
+                <h3 class="col-9 text-center">covid-19 visualizer</h3>
                 <img src="" alt="">
-                <p>
+                <p class="col-9">
                     create an account. Login to view current status of covid cases. statewise activity details are also available with chart based presentation
                 </p>
+                <h5 class="col-9"><b>Dev-Dependencies : </b><i>Angular</i></h5>
+                <div class="col-9"><a href="https://app.netlify.com/sites/covid19-visualizer-hamsavardhan" target="_blank" ><button>visit</button></a></div>
             </div>
-            <div>
-                <h3>razorpay checkout</h3>
+            <div class="container bigproj my-5">
+                <h3 class="col-9 offset-3 text-center">razorpay checkout</h3>
                 <img src="" alt="">
-                <p>
+                <p class="col-9 offset-3 text-center">
                     A basic integration of razorpay payment gateway.we can go in pay and buy for dupe items.money will be refunded after 3 days of transaction.
                 </p>
+                <h5 class="col-9 offset-3"><b>Dev-Dependencies : </b><i>Angular, flask</i></h5>
+                <div class="col-9 offset-3"><a href="https://razorpay-checkout-hamsavardhan.netlify.app/" target="_blank" ><button>visit</button></a></div>
             </div>
-            <div>
-                <h3>Github Replica</h3>
+            <div class="container bigproj my-5">
+                <h3 class="col-9 text-center">Github Replica</h3>
                 <img src="" alt="">
-                <p>
+                <p class="col-9">
                     we can search for a repo or a user after entering to webapp. If wanted to know more user will be redirected to original  repo
                 </p>
+                <h5 class="col-9"><b>Dev-Dependencies : </b><i>Reactjs</i></h5>
+                <div  class="col-9"> <a href="https://app.netlify.com/sites/hava-github-replica" target="_blank"><button>visit</button></a></div>
             </div>
-            <div>
-                <h3>NY Times</h3>
-                <div>
-                    <button></button>
+            <div class="smallproj container-fluid row">
+                <div class="container">
+                    <div class="col-4">
+                        <h3 class="col-12 text-center">NY Times</h3>
+                        <div class="container-fluid">
+                            <img src="" alt="">
+                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                        </div>
+                        <p class="container">Read the short news and if interested click to view more about it</p>
+                    </div>
+                    <div class="col-4">
+                        <h3 class="col-12 text-center">Cricket game</h3>
+                        <div class="container-fluid">
+                            <img src="" alt="">
+                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                        </div>
+                        <p class="container">Two team cricket game similar to book cricket</p>
+                    </div>
                 </div>
-                <p>Read the short news and if interested click to view more about it</p>
-            </div>
-            <div>
-                <h3>Cricket game</h3>
-                <div><button></button></div>
-                <p>Two team cricket game similar to book cricket</p>
-            </div>
-            <div>
-                <h3>tic tac toe</h3>
-                <div><button></button></div>
-                <p>tic tac toe game but with colors instead of 'x' and 'o'</p>
-            </div>
-            <div>
-                <h3>weather details</h3>
-                <div><button></button></div>
-                <p>Many Countries are listed and on click current weather is displayed</p>
+                <div class="container">
+                    <div class="col-4">
+                        <h3 class="col-12 text-center">tic tac toe</h3>
+                        <div class="container-fluid">
+                            <img src="" alt="">
+                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                        </div>
+                        <p class="container">tic tac toe game but with colors instead of 'x' and 'o'</p>
+                    </div>
+                    <div class="col-4">
+                        <h3 class="col-12 text-center">weather details</h3>
+                        <div class="container-fluid">
+                            <img src="" alt="">
+                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                        </div>
+                        <p class="container">Many Countries are listed and on click current weather is displayed</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer id="contact"></footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
