--- a/index.html
+++ b/index.html
@@ -118,90 +118,130 @@
             <h1 class="container text-center">what I did ?</h1>
             <div class="container bigproj my-5">
                 <h3 class="col-9 text-center">personalized chat</h3>
-                <img src="" alt="">
+                <img src="./images/chat.JPG" alt="chat">
                 <p class="col-9">
                     Login to your account(Authentication included).Find your friends and chat.There is a room chat too.Join a room or create a room of your own.Ask your friends to join in same room and chat.There is an add a friend option
                 </p>
                 <h5 class="col-9"><b>Dev-Dependencies : </b><i>Reactjs, mongodb, nodejs, express</i></h5>
-                <div  class="col-9"><a href="https://app.netlify.com/sites/hava-chat" target="_blank"><button>visit</button></a></div>
+                <div  class="col-9"><a href="https://hava-chat.netlify.app" target="_blank"><button>visit</button></a>
+                    <a href="#" target="_blank"><button>repo</button></a>
+                </div>
             </div>
             <div class="container bigproj my-5">
                 <h3 class="col-9 offset-3 text-center">url shortener</h3>
-                <img src="" alt="">
+                <img src="./images/urlshortener.JPG" alt="urlshortener">
                 <p class="col-9 offset-3 text-center">
                     Create an account. Activate it through mail. Have an forgot password option too. Enter into dashboard. Enter annoying long url to get peaceful short url.
                 </p>
                 <h5 class="col-9 offset-3"><b>Dev-Dependencies : </b><i>Angular, nodejs, express</i></h5>
-                <div  class="col-9 offset-3"><a href="https://app.netlify.com/sites/hamsavardhan-urlshortener-frontend" target="_blank"><button>visit</button></a></div>
+                <div  class="col-9 offset-3"><a href="https://hamsavardhan-urlshortener-frontend.netlify.app" target="_blank"><button>visit</button></a>
+                    <a href="#" target="_blank"><button>repo</button></a>
+                </div>
             </div>
             <div class="container bigproj my-5">
                 <h3 class="col-9 text-center">covid-19 visualizer</h3>
-                <img src="" alt="">
+                <img src="./images/covid.JPG" alt="covid-19">
                 <p class="col-9">
                     create an account. Login to view current status of covid cases. statewise activity details are also available with chart based presentation
                 </p>
                 <h5 class="col-9"><b>Dev-Dependencies : </b><i>Angular</i></h5>
-                <div class="col-9"><a href="https://app.netlify.com/sites/covid19-visualizer-hamsavardhan" target="_blank" ><button>visit</button></a></div>
+                <div class="col-9"><a href="https://covid19-visualizer-hamsavardhan.netlify.app" target="_blank" ><button>visit</button></a>
+                    <a href="#" target="_blank"><button>repo</button></a>
+                </div>
             </div>
             <div class="container bigproj my-5">
                 <h3 class="col-9 offset-3 text-center">razorpay checkout</h3>
-                <img src="" alt="">
+                <img src="./images/razorpay.JPG" alt="razorpay">
                 <p class="col-9 offset-3 text-center">
                     A basic integration of razorpay payment gateway.we can go in pay and buy for dupe items.money will be refunded after 3 days of transaction.
                 </p>
                 <h5 class="col-9 offset-3"><b>Dev-Dependencies : </b><i>Angular, flask</i></h5>
-                <div class="col-9 offset-3"><a href="https://razorpay-checkout-hamsavardhan.netlify.app/" target="_blank" ><button>visit</button></a></div>
+                <div class="col-9 offset-3"><a href="https://razorpay-checkout-hamsavardhan.netlify.app" target="_blank" ><button>visit</button></a>
+                    <a href="#" target="_blank"><button>repo</button></a>
+                </div>
             </div>
             <div class="container bigproj my-5">
                 <h3 class="col-9 text-center">Github Replica</h3>
-                <img src="" alt="">
+                <img src="./images/github.JPG" alt="Github">
                 <p class="col-9">
                     we can search for a repo or a user after entering to webapp. If wanted to know more user will be redirected to original  repo
                 </p>
-                <h5 class="col-9"><b>Dev-Dependencies : </b><i>Reactjs</i></h5>
-                <div  class="col-9"> <a href="https://app.netlify.com/sites/hava-github-replica" target="_blank"><button>visit</button></a></div>
+                <h5 class="col-9"><b>Dev-Dependencies : </b><i>Re
+                    actjs</i></h5>
+                <div  class="col-9"> <a href="https://hava-github-replica.netlify.app" target="_blank"><button>visit</button></a>
+                    <a href="#" target="_blank"><button>repo</button></a>
+                </div>
             </div>
             <div class="smallproj container-fluid row">
-                <div class="container">
-                    <div class="col-4">
+                <div class="container-fluid">
+                    <div class="col-3">
                         <h3 class="col-12 text-center">NY Times</h3>
                         <div class="container-fluid">
-                            <img src="" alt="">
-                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                            <img src="./images/nytimes.JPG" alt="">
+                            <a href="https://hamsavardhan-nytimes-content.netlify.app/" target="_blank" class="col-12"><button>visit</button></a>
+                            <a href="#" target="_blank" class="col-12"><button>repo</button></a>
                         </div>
                         <p class="container">Read the short news and if interested click to view more about it</p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <h3 class="col-12 text-center">Cricket game</h3>
                         <div class="container-fluid">
-                            <img src="" alt="">
-                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                            <img src="./images/cricket.JPG" alt="">
+                            <a href="https://hamsavardhan-cric-isfun.netlify.app/" target="_blank" class="col-12"><button>visit</button></a>
+                            <a href="#" target="_blank" class="col-12"><button>repo</button></a>
                         </div>
                         <p class="container">Two team cricket game similar to book cricket</p>
                     </div>
-                </div>
-                <div class="container">
-                    <div class="col-4">
+                    <div class="col-3">
                         <h3 class="col-12 text-center">tic tac toe</h3>
                         <div class="container-fluid">
-                            <img src="" alt="">
-                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                            <img src="./images/tictactoe.JPG" alt="">
+                            <a href="https://hava-tictactoe.netlify.app/" target="_blank" class="col-12"><button>visit</button></a>
+                            <a href="#" target="_blank" class="col-12"><button>repo</button></a>
                         </div>
                         <p class="container">tic tac toe game but with colors instead of 'x' and 'o'</p>
                     </div>
-                    <div class="col-4">
+                </div>
+                <div class="container-fluid">
+                    <div class="col-3">
                         <h3 class="col-12 text-center">weather details</h3>
                         <div class="container-fluid">
-                            <img src="" alt="">
-                            <a href="#" target="_blank" class="col-12"><button>visit</button></a>
+                            <img src="./images/weather.JPG" alt="">
+                            <a href="https://hamsavardhan-allcountries-weather.netlify.app/" target="_blank" class="col-12"><button>visit</button></a>
+                            <a href="#" target="_blank" class="col-12"><button>repo</button></a>
                         </div>
                         <p class="container">Many Countries are listed and on click current weather is displayed</p>
                     </div>
+                    <div class="col-3">
+                        <h3 class="col-12 text-center">Scheduler</h3>
+                        <div class="container-fluid">
+                            <img src="./images/scheduler.JPG" alt="">
+                            <a href="https://hava-daysandtopics.netlify.app/" target="_blank" rel="noopener noreferrer"><button>visit</button></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><button>repo</button></a>
+                        </div>
+                        <p class="container">create topics to be taught for a day with content editor</p>
+                    </div>
+                    <div class="col-3">
+                        <h3 class="col-12 text-center">pricing cards</h3>
+                        <div class="container-fluid">
+                            <img src="./images/pricing.JPG" alt="">
+                            <a href="https://hava-pricing-cards.netlify.app/" target="_blank" rel="noopener noreferrer"><button>visit</button></a>
+                            <a href="#" target="_blank" rel="noopener noreferrer"><button>repo</button></a>
+                        </div>
+                        <p class="container">pricing card design trend in neumorphic design</p>
+                    </div>
                 </div>
             </div>
+            <div class="container npm"></div>
         </div>
     </main>
-    <footer id="contact"></footer>
+    <footer id="contact">
+        <ul>
+            <li><a href="https://github.com/Hamsa-Vardhan">github</a></li>
+            <li><a href="https://linkedin.com/in/hamsavardhans-profile">linkedin</a></li>
+            <li><a href="https://instagram.com/hamsa_vardhan/">instagram</a></li>
+        </ul>
+    </footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 </body>
