added few styles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li> <a href="#knowledge">knowledge</a> </li>
                 <li> <a href="#projects">projects</a> </li>
                 <li> <a href="#contact">contact</a> </li>
+                <li><a href="https://hava-resume.netlify.app" target="_blank">resume</a></li>
             </ul>   
         </nav>
         <div>
@@ -36,7 +37,7 @@
         <div class="row" id="about">
             <div class="container-fluid">
                 <h1 class="col-12 text-center">I'm</h1>
-                <img src="./images/about.jpg" alt="about me">
+                <img src="./images/about.jpg" class="about-img" alt="about me">
                 <p class="col-lg-10 offset-lg-2 text-center">
                         A fervent web developer with great enthusiasm to enrich web. 
                         I prefer to keep learning, continue challenging myself, and do interesting things that matter.
@@ -62,7 +63,7 @@
             </div>
         </div>
         <div class="row" id="knowledge">
-            <div class="container-sm-fluid container-lg">
+            <div class="container">
                 <h1 class="col-sm-12 col-lg-12 text-center">I can do with?</h1>
                 <ul class="col-12">
                     <li class="col-sm-5 col-lg-3">
@@ -229,8 +230,8 @@
                             <p class="container card-text">create topics to be taught for a day with content editor</p>
                         </div>
                         <div class="container card-body">
-                            <a class="col-5 mx-1" href="https://hava-daysandtopics.netlify.app/" target="_blank" rel="noopener noreferrer"><button> visit</button></a>
-                            <a class="col-5 mx-1" href="https://github.com/Hamsa-Vardhan/preSchedule/tree/master/pre-schedule" target="_blank" rel="noopener noreferrer"><button><i class="fab fa-github"></i>repo</button></a>
+                            <a class="col-sm-5 col-lg-5 mx-1" href="https://hava-daysandtopics.netlify.app/" target="_blank" rel="noopener noreferrer"><button> visit</button></a>
+                            <a class="col-sm-5 col-lg-5 mx-1" href="https://github.com/Hamsa-Vardhan/preSchedule/tree/master/pre-schedule" target="_blank" rel="noopener noreferrer"><button><i class="fab fa-github"></i>repo</button></a>
 
                         </div>
                     </div>
@@ -241,8 +242,8 @@
                             <p class="container card-text">pricing card design trend in neumorphic design</p>
                         </div>
                         <div class="container card-body">      
-                            <a class="col-5 mx-1" href="https://hava-pricing-cards.netlify.app/" target="_blank" rel="noopener noreferrer"><button> visit</button></a>
-                            <a class="col-5 mx-1" href="https://github.com/Hamsa-Vardhan/pricing-cards" target="_blank" rel="noopener noreferrer"><button><i class="fab fa-github"></i>repo</button></a>
+                            <a class="col-sm-5 col-lg-5 mx-1" href="https://hava-pricing-cards.netlify.app/" target="_blank" rel="noopener noreferrer"><button> visit</button></a>
+                            <a class="col-sm-5 col-lg-5 mx-1" href="https://github.com/Hamsa-Vardhan/pricing-cards" target="_blank" rel="noopener noreferrer"><button><i class="fab fa-github"></i>repo</button></a>
                         </div>
                     </div>
                 </div>
