--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             </ul>   
         </nav>
         <div>
-            <img src="./images/ccd-edited.jpg" alt="personal image">
-            <p>I'm <br> <b>Hamsa Vardhan</b> <br> <i>a web developer</i> </p>
+            <img src="./images/ccd-edited.jpg" id="index-image" alt="personal image">
+            <p id="totype">I'm <br> <b>Hamsa Vardhan</b> <br> <i>a web developer</i> </p>
         </div>
     </header>
     <main class="container-fluid">
         <div class="row" id="about">
             <div class="container-fluid">
-                <h1 class="col-12 text-center">I'm</h1>
+                <h1 class="col-12 text-center">I'm a</h1>
                 <img src="./images/about.jpg" class="about-img" alt="about me">
                 <p class="col-lg-10 offset-lg-2 text-center">
-                        A fervent web developer with great enthusiasm to enrich web. 
+                        Fervent web developer with great enthusiasm to enrich web. 
                         I prefer to keep learning, continue challenging myself, and do interesting things that matter.
                     My abundant energy fuels me in the pursuit of many interests,
                         hobbies, areas of study and artistic endeavors.
@@ -70,10 +70,10 @@
                         <h5>frontend</h5>
                         <ul class="">
                             <li>
-                                Reactjs
+                                <i class="fab fa-react"></i> Reactjs
                             </li>
                             <li>
-                                Angular
+                                <i class="fab fa-angular"></i> Angular
                             </li>
                         </ul>
                     </li>
@@ -81,7 +81,7 @@
                         <h5>Backend</h5>
                         <ul>
                             <li>
-                                nodejs
+                                <i class="fab fa-node"></i> nodejs
                             </li>
                             <li>
                                 flask
@@ -103,13 +103,13 @@
                         <h5>languages</h5>
                         <ul>
                             <li>
-                                html5 / css3
+                                <i class="fab fa-html5"></i> html5 /   <i class="fab fa-css3"></i>css3
                             </li>
                             <li>
-                                javascript
+                                <i class="fab fa-node-js"></i> javascript
                             </li>   
                             <li>
-                                python
+                                <i class="fab fa-python"></i>  python
                             </li>
                         </ul>
                     </li>
@@ -259,6 +259,7 @@
             <li class="col-sm-5 text-center my-3 mx-1 col-lg-2"><a href="https://instagram.com/hamsa_vardhan/" target="_blank"> <i class="fab fa-instagram"></i> instagram</a></li>
         </ul>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
