--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
         <div>
             <img src="./images/ccd-edited.jpg" id="index-image" alt="personal image">
-            <p id="totype">I'm <br> <b>Hamsa Vardhan</b> <br> <i>a web developer</i> </p>
+            <p id="totype">I'm <br> <span id='addtype'></span> </p>
         </div>
     </header>
     <main class="container-fluid">
