--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>   
         </nav>
         <div>
-            <img src="./images/ccd-edited.jpg" id="index-image" alt="personal image">
+            <img src="./images/newpic.jpg" id="index-image" alt="personal image">
             <p id="totype">I'm <br> <span id='addtype'></span> </p>
         </div>
     </header>
