--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </ul>   
         </nav>
         <div>
-            <img src="./images/ccd-edited.jpg" id="index-image" alt="personal image">
-            <p id="totype">I'm <br> <span id='addtype'></span> </p>
+            <img src="./images/open.jpg" id="index-image" alt="personal image" style="box-shadow: 2px 0 0.5rem -1px;">
+            <p id="totype">I'm <br> <span id='addtype'></span> </p> 
         </div>
     </header>
     <main class="container-fluid">
